Add initial HTML structure for index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>CSCE 190: Robert Albetel</title>
+</head>
+<body>
+<h1>Robert Albetel</h1>
+</body>
+</html>
