--- a/index.html
+++ b/index.html
@@ -5,5 +5,22 @@
 </head>
 <body>
 <h1>Robert Albetel</h1>
+    <div class="about">
+        <h2>About me</h2>
+        <p>With a passion for software and a growing interest in emerging fields like AI, robotics, and data science,
+            <br>I strive to understand how technology shapes our world.</br>
+            <br>My goal in this course is to build the skills needed to contribute to a more seamless and secure future through innovative</br>
+            <br>computing solutions.</br>
+</p>
+    </div>
+    <div class="skills">
+        <h2>Skills</h2>
+    </div>
+    <div class="projects">
+        <h2>Highlighted projects</h2>
+    </div>
+    <div class="contact">
+        <h2>Contact me</h2>
+    </div>
 </body>
 </html>
