Add statement image file

--- a/index.html
+++ b/index.html
@@ -22,5 +22,18 @@
     <div class="contact">
         <h2>Contact me</h2>
     </div>
+    <div id="outerDiv" style="display:flex; flex-wrap:wrap">
+<div id="leftThird" style="width:30%">LEFT</div>
+<div id="middleThird" style="width:30%">MIDDLE</div>
+<div id="rightThird" style="width:30%">RIGHT</div>
+</div>
+<div class = "projects">
+<!-- Problem Statement Assignment -->
+<section class="project">
+<a href="files/statement.png"><h3>Problem Statement</h3></a>
+<a href="files/statement.png"><img src="images/problem.png"></a>
+<p>One sentence to describe your problem</p>
+</section>
+</div>
 </body>
 </html>
