Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 <a href="files/statement.png"><img src="images/problem.png"></a>
 <p>One sentence to describe your problem</p>
 </section>
+<!--Affinity Diagram Assignment -->
+<section class="project">
+<a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
+<a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
+<p>
+Text describing the diagram
+</p>
+</section>
 </div>
 </body>
 </html>
