--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 Text describing the diagram
 </p>
 </section>
+<section class="project">
+<a href="files/computing scenarios.pdf"><h3>Sketches</h3></a>
+<a href="files/computing scenarios.pdf"><img src="images/Sketches_IMG.png"></a>
+<p>
+Text describing the sketches
+</p>
+</section>
 </div>
 </body>
 </html>
