--- a/index.html
+++ b/index.html
@@ -22,5 +22,33 @@
     <div class="contact">
         <h2>Contact me</h2>
     </div>
+    <div id="outerDiv" style="display:flex; flex-wrap:wrap">
+<div id="leftThird" style="width:30%">LEFT</div>
+<div id="middleThird" style="width:30%">MIDDLE</div>
+<div id="rightThird" style="width:30%">RIGHT</div>
+</div>
+<div class = "projects">
+<!-- Problem Statement Assignment -->
+<section class="project">
+<a href="files/statement.pdf"><h3>Problem Statement</h3></a>
+<a href="files/statement.pdf"><img src="images/problem.png"></a>
+<p>One sentence to describe your problem</p>
+</section>
+<!--Affinity Diagram Assignment -->
+<section class="project">
+<a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
+<a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
+<p>
+Text describing the diagram
+</p>
+</section>
+<section class="project">
+<a href="files/computing scenarios.pdf"><h3>Sketches</h3></a>
+<a href="files/computing scenarios.pdf"><img src="images/Sketches_IMG.png"></a>
+<p>
+Text describing the sketches
+</p>
+</section>
+</div>
 </body>
 </html>
