--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
 <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
 <p>
-Text describing the diagram
+This diagram gives an overview of the ideas we had on how to implement our solution.
 </p>
 </section>
 <section class="project">
 <a href="files/computing scenarios.pdf"><h3>Sketches</h3></a>
 <a href="files/computing scenarios.pdf"><img src="images/Sketches_IMG.png"></a>
 <p>
-Text describing the sketches
+These sketches illustrate the various pages that may be encountered using our app.
 </p>
 </section>
 </div>
