Added resume in preparation for conversion to html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@ This diagram gives an overview of the ideas we had on how to implement our solut
 These sketches illustrate the various pages that may be encountered using our app.
 </p>
 </section>
+<section class="project">
+<a href="files/resume.pdf"><h3>Resume</h3></a>
+<a href="files/resume.pdf"><img src="images/resume.png"></a>
+<p>
+This is my resume, which includes my skills and experiences.
+</p>
+</section>
 </div>
 </body>
 </html>
