Styling adjustments and adding html resume

--- a/resume.html
+++ b/resume.html
@@ -1,13 +1,13 @@
 <html lang="en">
 <head>
-  <!--<meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume</title>-->
-  <link rel="stylesheet" href="div_res_style.css" >
+  <title>Resume</title>
+  <link rel="stylesheet" href="resume_styles.css" >
   </head>
 <body>
   <div class="header">
-    <h1>Sarah Johnson</h1>
+    <h1>Robert Albetel</h1>
     <hr> <!-- Horizontal line -->
   </div>
 
@@ -48,7 +48,7 @@
     <hr>
   </div>
 
-  <<div class="section">
+  <div class="section">
     <div class="section-title">Skills</div>
     <div class="section-content">
       <ul>
