--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>CSCE 190: Robert Albetel</title>
+<link rel="stylesheet" href="styles.css" >
 </head>
 <body>
 <h1>Robert Albetel</h1>
@@ -13,45 +14,43 @@
             <br>computing solutions.</br>
 </p>
     </div>
-    <div class="skills">
+    <div class="skills" id="leftThird" style="width:30%">
         <h2>Skills</h2>
     </div>
-    <div class="projects">
+    <div class="projects" id="middleThird" style="width:30%">
         <h2>Highlighted projects</h2>
     </div>
-    <div class="contact">
+    <div class="contact" id="rightThird" style="width:30%">
         <h2>Contact me</h2>
     </div>
     <div id="outerDiv" style="display:flex; flex-wrap:wrap">
-<div id="leftThird" style="width:30%">LEFT</div>
-<div id="middleThird" style="width:30%">MIDDLE</div>
-<div id="rightThird" style="width:30%">RIGHT</div>
 </div>
 <div class = "projects">
 <!-- Problem Statement Assignment -->
-<section class="project">
+<section class="project" id="middleThird">
 <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
 <a href="files/statement.pdf"><img src="images/problem.png"></a>
 <p>One sentence to describe your problem</p>
 </section>
 <!--Affinity Diagram Assignment -->
-<section class="project">
+<section class="project" id="middleThird">
 <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
 <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
 <p>
 This diagram gives an overview of the ideas we had on how to implement our solution.
 </p>
 </section>
-<section class="project">
+<section class="project" id="middleThird">
 <a href="files/computing scenarios.pdf"><h3>Sketches</h3></a>
 <a href="files/computing scenarios.pdf"><img src="images/Sketches_IMG.png"></a>
 <p>
 These sketches illustrate the various pages that may be encountered using our app.
 </p>
 </section>
-<section class="project">
+<section class="project" id="middleThird">
 <a href="files/resume.pdf"><h3>Resume</h3></a>
 <a href="files/resume.pdf"><img src="images/resume.png"></a>
+<a href="resume.html"><h3>HTML Resume</h3></a>
 <p>
 This is my resume, which includes my skills and experiences.
 </p>
