Trying to align everything nicely

--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="section">
-    <div class="section-title">Education</div>
+    <div class="section-title">EDUCATION</div>
     <hr>
     <div class="section-content">
       <strong>University of South Carolina</strong><br>
@@ -22,34 +22,35 @@
   </div>
 
   <div class="section">
-    <div class="section-title">Major Achievements</div>
+  <div class="section-title">MAJOR ACHIEVEMENTS</div>
+    <hr>
     <div class="section-content">
-      <strong>University of South Carolina Artificial Intelligence Institute</strong>Intern, August 2024 - Present
+      <strong>University of South Carolina Artificial Intelligence Institute</strong>			Intern, August 2024 - Present
       <ul> <!--unordered list-->
         <li>Assist with designing an AI website for the research group.</li> <!--list item-->
         <li>Participating in brainstorm sessions with group members.</li>
         <li>Debugging backend program for the current research project.</li>
       </ul>
 
-      <strong>Robotics Club</strong>Lead Programmer and Autonomous Strategist, January 2020 - May 2025
+      <strong>Robotics Club</strong>									Lead Programmer and Autonomous Strategist, January 2020 - May 2025
       <ul>
         <li>Created the main program for the robot including all controls and special abilities.</li>
         <li>Led autonomous testing and mapped out an average of 3 routes per season.</li>
         <li>Securely stored all final code versions as well as any revisions, helping my team to win 7 awards.</li>
       </ul>
 
-      <strong>South Carolina Philharmonic Youth Orchestra</strong>Symphonic, August 2024 - April 2025
+      <strong>South Carolina Philharmonic Youth Orchestra</strong>					Symphonic, August 2024 - April 2025
       <ul>
         <li>Played the cello in an audition-based student orchestra</li>
         <li>Participated in weekly rehearsals every week.</li>
         <li>Performed in orchestra concerts in front of around 2,000 people.</li>
       </ul>
     </div>
-    <hr>
   </div>
 
   <div class="section">
-    <div class="section-title">Skills</div>
+    <div class="section-title">ADDITIONAL SKILLS</div>
+    <hr>
     <div class="section-content">
       <ul>
         <li>Programming languages: Python, C++, Java, HTML, and CSS</li>
