--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
 </div>
 <div class = "projects">
 <!-- Problem Statement Assignment -->
-<section class="project" id="middleThird">
+<section class="project">
 <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
 <a href="files/statement.pdf"><img src="images/problem.png"></a>
 <p>One sentence to describe your problem</p>
 </section>
 <!--Affinity Diagram Assignment -->
-<section class="project" id="middleThird">
+<section class="project">
 <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
 <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
 <p>
 This diagram gives an overview of the ideas we had on how to implement our solution.
 </p>
 </section>
-<section class="project" id="middleThird">
+<section class="project">
 <a href="files/computing scenarios.pdf"><h3>Sketches</h3></a>
 <a href="files/computing scenarios.pdf"><img src="images/Sketches_IMG.png"></a>
 <p>
 These sketches illustrate the various pages that may be encountered using our app.
 </p>
 </section>
-<section class="project" id="middleThird">
+<section class="project">
 <a href="files/resume.pdf"><h3>Resume</h3></a>
 <a href="files/resume.pdf"><img src="images/resume.png"></a>
 <a href="resume.html"><h3>HTML Resume</h3></a>
