Final resume adjustments

--- a/resume.html
+++ b/resume.html
@@ -25,21 +25,21 @@
   <div class="section-title">MAJOR ACHIEVEMENTS</div>
     <hr>
     <div class="section-content">
-      <strong>University of South Carolina Artificial Intelligence Institute</strong>	Intern, August 2024 - Present
+      <strong>University of South Carolina Artificial Intelligence Institute</strong>	<span class="section-subcontent">Intern, August 2024 - Present</span>
       <ul> <!--unordered list-->
         <li>Assist with designing an AI website for the research group.</li> <!--list item-->
         <li>Participating in brainstorm sessions with group members.</li>
         <li>Debugging backend program for the current research project.</li>
       </ul>
 
-      <strong>Robotics Club</strong>							Lead Programmer and Autonomous Strategist, January 2020 - May 2025
+      <strong>Robotics Club</strong><span class="section-subcontent">Lead Programmer and Autonomous Strategist, January 2020 - May 2025</span>
       <ul>
         <li>Created the main program for the robot including all controls and special abilities.</li>
         <li>Led autonomous testing and mapped out an average of 3 routes per season.</li>
         <li>Securely stored all final code versions as well as any revisions, helping my team to win 7 awards.</li>
       </ul>
 
-      <strong>South Carolina Philharmonic Youth Orchestra</strong>					Symphonic, August 2024 - April 2025
+      <strong>South Carolina Philharmonic Youth Orchestra</strong><span class="section-subcontent">Symphonic, August 2024 - April 2025</span>
       <ul>
         <li>Played the cello in an audition-based student orchestra</li>
         <li>Participated in weekly rehearsals every week.</li>
