Added project links

--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@ These sketches illustrate the various pages that may be encountered using our ap
 This is my resume, which includes my skills and experiences.
 </p>
 </section>
+<section class="project">
+<a href="https://github.com/algalda/CSCE146_Homework03"><h3>Homework 3</h3></a>
+<a href="https://github.com/algalda/CSCE146_Homework04"><h3>Homework 4</h3></a>
+<a href="https://github.com/algalda/CSCE146_Lab04"><h3>Lab 4</h3></a>
+<a href="https://github.com/algalda/CSCE146_Homework05"><h3>Homework 5</h3></a>
+<a href="https://github.com/algalda/CSCE146_Lab05"><h3>Lab 5</h3></a>
+<a href="https://github.com/algalda/CSCE146_Homework06"><h3>Homework 6</h3></a>
+<a href="https://github.com/algalda/CSCE146_Lab06"><h3>Lab 6</h3></a>
+<a href="https://github.com/algalda/CSCE146_Homework07"><h3>Homework 7</h3></a>
+<a href="https://github.com/algalda/CSCE146_Lab07"><h3>Lab 7</h3></a>
+<a href="https://github.com/algalda/CSCE146_Lab08"><h3>Lab 8</h3></a>
+<a href="https://github.com/algalda/CSCE146_Lab09"><h3>Lab 9</h3></a>
 </div>
 </body>
 </html>
