Trying to fix overlap

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>CSCE 190: Robert Albetel</title>
-<link rel="stylesheet" href="styles.css" >
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Robert Albetel</h1>
@@ -30,9 +30,9 @@
 <section class="project">
 <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
 <a href="files/statement.pdf"><img src="images/problem.png"></a>
-<p>One sentence to describe your problem</p>
 </section>
 <!--Affinity Diagram Assignment -->
+<div id="middleThird">
 <section class="project">
 <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
 <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
@@ -40,13 +40,14 @@
 This diagram gives an overview of the ideas we had on how to implement our solution.
 </p>
 </section>
+</br><br>
 <section class="project">
 <a href="files/computing scenarios.pdf"><h3>Sketches</h3></a>
 <a href="files/computing scenarios.pdf"><img src="images/Sketches_IMG.png"></a>
 <p>
 These sketches illustrate the various pages that may be encountered using our app.
 </p>
-</section>
+</section></div><div>
 <section class="project">
 <a href="files/resume.pdf"><h3>Resume</h3></a>
 <a href="files/resume.pdf"><img src="images/resume.png"></a>
@@ -55,6 +56,7 @@ These sketches illustrate the various pages that may be encountered using our ap
 This is my resume, which includes my skills and experiences.
 </p>
 </section>
+</div>
 <section class="project">
 <a href="https://github.com/algalda/CSCE146_Homework03"><h3>Homework 3</h3></a>
 <a href="https://github.com/algalda/CSCE146_Homework04"><h3>Homework 4</h3></a>
