moved projects to appropriate sections

--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
     </div>
     <div class="projects" id="middleThird" style="width:30%">
         <h2>Highlighted projects</h2>
-    </div>
-    <div class="contact" id="rightThird" style="width:30%">
-        <h2>Contact me</h2>
-    </div>
-    <div id="outerDiv" style="display:flex; flex-wrap:wrap">
-</div>
-<div class = "projects">
+        <div class = "projects">
 <!-- Problem Statement Assignment -->
 <section class="project">
 <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
@@ -69,6 +63,12 @@ This is my resume, which includes my skills and experiences.
 <a href="https://github.com/algalda/CSCE146_Lab07"><h3>Lab 7</h3></a>
 <a href="https://github.com/algalda/CSCE146_Lab08"><h3>Lab 8</h3></a>
 <a href="https://github.com/algalda/CSCE146_Lab09"><h3>Lab 9</h3></a>
+</section></div>
+    </div>
+    <div class="contact" id="rightThird" style="width:30%">
+        <h2>Contact me</h2>
+    </div>
+    <div id="outerDiv" style="display:flex; flex-wrap:wrap">
 </div>
 </body>
 </html>
