--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <br>computing solutions.</br>
 </p>
     </div>
-    <div class="skills" id="leftThird" style="width:30%">
+    <div class="skills">
         <h2>Skills</h2>
     </div>
-    <div class="projects" id="middleThird" style="width:30%">
+    <div class="projects" style="width:30%">
         <h2>Highlighted projects</h2>
         <div class = "projects">
 <!-- Problem Statement Assignment -->
@@ -26,10 +26,10 @@
 <a href="files/statement.pdf"><img src="images/problem.png"></a>
 </section>
 <!--Affinity Diagram Assignment -->
-<div id="middleThird">
+<div>
 <section class="project">
 <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
-<a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png"></a>
+<a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png" id="middleThird"></a>
 <p>
 This diagram gives an overview of the ideas we had on how to implement our solution.
 </p>
@@ -65,7 +65,7 @@ This is my resume, which includes my skills and experiences.
 <a href="https://github.com/algalda/CSCE146_Lab09"><h3>Lab 9</h3></a>
 </section></div>
     </div>
-    <div class="contact" id="rightThird" style="width:30%">
+    <div class="contact">
         <h2>Contact me</h2>
     </div>
     <div id="outerDiv" style="display:flex; flex-wrap:wrap">
